--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "14.0.2",
     "react": "~15.4.0",
     "react-native": "0.41.2",
-    "react-redux": "^5.0.3"
+    "react-redux": "^5.0.3",
+    "redux-thunk": "^2.2.0"
   }
 }
