--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node node_modules/jest/bin/jest.js --watch",
+    "lint": "eslint --ext .js,.jsx ."
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-eslint": "^7.2.2",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react-native": "^2.3.1",
     "expo": "14.0.2",
     "react": "~15.4.0",
     "react-native": "0.41.2",
